chore: more styling, fix canvas jumping with interval to set resize

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,7 +61,7 @@ canvas {
 }
 
 .viewport-section {
-  min-height: 100dvh;
+  min-height: 100lvh;
 }
 
 @media (min-width: 768px) {
